# js_ergo

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src/: lib.rs  pad_start.rs  str_ext.rs
src/pad_start/: tests.rs
src/str_ext/: tests.rs
