[package]
name = "js_ergo"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Ergonomic, JavaScript-style string helpers for Rust (padStart and friends)."
license = "MIT"
repository = "https://github.com/chaffRs/js_ergo"
documentation = "https://docs.rs/js_ergo"
readme = "README.md"
keywords = ["string", "padding", "javascript", "ergonomics", "text"]
categories = ["text-processing"]
exclude = [".github", ".githooks", "TODO.md"]

[dependencies]
